plang/testing/logs/false-incorrect/110/program110.p.p
kM3 :- (l, l hiJh; (ik (N) c7p), vwHA (J) Tu4 (Rw)), (mUGO, jj92 (U) (nCQNF (eC (MH)) (EAA) (xxn B (W) (l (V) (p0kNl) yEa (M7LO6)))) (UhzV)), (wyFQ4 sRQ8 P9H), co (k7pzw Rsxjo (ny8X xTHpy) (PL)) (WCQ); bih (N) (B7BG) ziroN (H), (mm, q (Qnwpr) (nK5 (f (gKmd (lfWl) (Svgj)) (pZm0M Fn (ya1U l) B)) (avMuj (peYK (X9)) (W) (oZPK)) (sAX (JU) (e2 (bZQDS (om8v BKL86) Y6 (J)) aA)) aip0b) (eC2 sRj OTRu5), (q in3yX (WXGCm) (jt n (Js5) (YNbq) nxd) (j))).

ng kby (vLE hOl (mlKkS) ob (iJ9LS)) :- la2 DR (GDTjK); bJKi; e, e (INe) (s) Y; s9QC tUw VafT H; (xaJJC); sy fxB (B9); w5 s3Al (Ju29); w (D) Na (wM47 (HJ)) Y, nhGi (Vw) t (i0c v3ON V3kY), oJDc (ebXc (Ai8X)) yo1M4 zrK (BD); ((wLdv5 vjw NE)); (n9 bE w (RJ)); lvDI (GN) PN x6DEg; e y (Kt5) s481, (v m1lQ; l8ti3), uc hsfB qsv0 (q) (zPD).
ozl8 rw dwl2 :- ((cMEk5 (dT2g pz (g9o3 (rL3eP Uo Y) nESr4)))).


p y3 vZcYf :- b (QZ) F.


woWc (hfjiJ (a) (A8ju) HZ5g (ya gfk (A) h68 (QsH))) (A) :- (yf (h1 (R)), ax (lG HEaWk UuFt n (uW (htEU) F6I)) m3 muFh7 ftqKY); sDG9; zHvc (J), uTY5 PI; lLua gz81j iCTHA (I) khQs; (nhp9 aV Lui1 (m) C), (wPi bP (bR XSCBL (YYUE) Khplj hCrHC) (FBoY)), (y (o (a7h) QE) (X)), (eDz Y i1Gd ju pePOf).


nlw :- f (rq (H68w) (Ia) (D7h)) (Mcsh) h F3fo1.
? c, eD, qZrRf F (t2 (YxK) (WpD) (H6)); tydl (YkAG) (DQV) l (Ks3); dX8a1 wXTUv Ac; ukxAI M; cGAb (pXv sETx (H7Hj) j7wgH oT) (WD) rV jy1T.


